# generalized-web-scraper

./: .gitignore  README.md  ai.py  api.py  html_parser.py  image_processor.py  main.py  models.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: HomePage.tsx  ProductDetailPage.tsx
tests/: __init__.py  test_html_parser.py  test_image_processor.py
