[project]
name = "take-home-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.15.0",
    "python-dotenv>=1.0.0",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "fastimage>=0.1.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
]
